Refactor and optimize GradleDependencyChecker.
Refactored the class to enhance modularity, introduce caching, and support parallel execution for dependency checks. Added better error handling, semantic version parsing, and improved user feedback with structured outputs.